# MASI-projekt

./: MASI_MATEUSZ_MISIAK_1ID25A_SPRAWOZDANIE.docx  Sprawko.docx
MASI - Projekt baza danych/: CMakeLists.txt  aswapwidget.cpp  bswapwidget.cpp  database.cpp  database.h  globals.cpp  horizontalwidget.cpp  main.cpp  save.cpp  save.h  verticalwidget.h
MASI - Projekt bez bazy danych/: CMakeLists.txt  aswapwidget.h  bswapwidget.h  globals.h  horizontalwidget.h  main.cpp
MASI-qt6/: CMakeLists.txt  combinedwidget.cpp  combinedwidget.h  globals.cpp  horizontalwidget.cpp  horizontalwidget.h  main.cpp  verticalwidget.cpp
MASI-test/: CMakeLists.txt  Main.qml  MyApp.qml  main.cpp
